# brickbuilderai

./: LICENSE  README.md  install.py  run.py
backend/: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  big-parts-list.csv  gobrick_colors.csv  local_run.py  nixpacks.toml  pyproject.toml  railway.json  rebrickable_colors.csv  start.sh
backend/scripts/: updateProcessedImageUrl.py
backend/src/: __init__.py  api.py
backend/src/data/: brick_library.json  brick_library.py  brick_structure.py
backend/src/requests/: claimGeneration.py  createCheckoutSession.py  estimatePrice.py  getCommunityGenerations.py  getGeneration.py  getGenerationsByImage.py  getPrice.py  getUserGenerations.py  glbToBricks.py  imageToBricks.py  ldrToBrickOwl.py  ldrToMpd.py  partToMpd.py  promptEditModel.py  resizeModel.py  sendWaitlistEmail.py  stripeWebhook.py  textToBricks.py  toggleIsCommunity.py  updateGenerationName.py  updateImagePreview.py  updateLdrAndPartsList.py  updateModel.py  updateUsername.py
backend/src/stability_analysis/: stability_analysis.py  utils.py
backend/src/utils/: __init__.py  auth.py  authorization.py  brickowl_utils.py  color_conversions.py  falApiClient.py  generate_3d_model_from_image.py  generate_image.py  generation_storage.py  headless_config.py  image_processing.py  local_db.py  pack_ldraw_model.py  posthog_client.py  prompt_enhancement_3D_premium_option_a.txt  prompt_enhancement_3D_premium_option_b.txt  prompt_enhancement_3D_premium_option_c.txt  prompt_enhancement_3D_regular_option_a.txt  prompt_enhancement_3D_regular_option_b.txt  prompt_enhancement_3D_regular_option_c.txt  sam3d_stream.py
backend/src/utils/conversions/: __init__.py  glb2brick.py  glb2obj.py  obj2voxel.py  trimesh_voxelizer.py  voxel2brick.py  voxel_utils.py
backend/src/utils/cpp/obj2vox/: CMakeLists.txt  README.md
backend/src/utils/cpp/obj2vox/batman/: batman.mtl
backend/src/utils/cpp/obj2vox/src/: constants.hpp  obj2voxel.cpp  voxelization.cpp
backend/src/utils/cpp/obj2vox/voxelio/: CMakeLists.txt
backend/test-files/glb/: airplane.glb  batman.glb  blueplane.glb  bricksign.glb  cat.glb  helicopter.glb  house.glb  link.glb  pikachu.glb  pikanew.glb  pony.glb  squirtle-weird.glb
backend/test-files/json/: estimate_price_test_request.json
backend/test-files/ldr/: batman.ldr  dog.ldr  pikachu.ldr
backend/test-files/scripts/: TRIPO3D_TEST_README.md  add_ldr_to_price_estimate_json.py  test_tripo3d.py  update_batman_json.py
backend/test-files/voxels/: batman.vl32  batman.xyzrgb  charizard.xyzrgb  unstable.xyzrgb  yoda.xyzrgb
backend/tests/: test_authorization.py
frontend/: .env-example  README.md  (+6 more)
serverless/LegoACE/: .gitignore  LICENSE  README.md  pyproject.toml
serverless/LegoACE/accelerate_config/: 6-gpu.yaml
serverless/LegoACE/configs/: config.py
serverless/LegoACE/dataset/: MVNpzDataset.py  SingleTokenDataset.py  dpodataset.py  textDataset.py
serverless/LegoACE/dpo/: train_dpo_acce.py  train_dpo_multi_gpu.sh
serverless/LegoACE/dpo/dpo_dataset/: build_cd_dataset.py
serverless/LegoACE/inference/: infer_4gpu.sh  infer_multi_view.sh  infer_uncondition.py  inference_image_condition.py  inference_multi_view.py  inference_text_condition.py
serverless/LegoACE/model/: gpt2.py  llama_image_condition.py  llama_text_condition.py  logitsprocessor.py  tokenizer.py
serverless/LegoACE/train/: train_image_npz_mv.py  train_npz_mv.sh  train_text.sh  train_text_condition.py  train_unconditional.py
serverless/LegoACE/utils/: data_utils.py  infer_utils.py  ldr_export_dir.py  log_utils.py  metric.py  misc.py  render.py  utils.py
serverless/LegoACE/utils/shader/: mesh.vert
serverless/serverless/: .gitignore  Dockerfile  README.md  app.py  depot.json  pyproject.toml  runpod_handler.py  trellis2_app.py
(+81 files in other folders)
