[project]
name = "brickai-backend-api"
version = "0.1.0"
description = "Convert a 3D object into a brick structure."
readme = "README.md"
authors = [
    { name = "Jake Johnson", email = "jake@frlabs.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "gurobipy",
    "matplotlib",
    "networkx",
    "numpy",
    "open3d",
    "trimesh",
    "pillow",
    "scipy",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=0.21.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "fal-client>=0.4.0",
    "requests>=2.28.0",
    "supabase>=2.9.1",
    "pyjwt>=2.8.0",
    "posthog>=3.0.0",
    "onnxruntime>=1.23.2",
    "stripe>=13.2.0",
    "resend>=2.4.0",
    "email-validator>=2.0.0",
    "rembg>=2.0.50",
    "pgserver>=0.1.4",
    "psycopg[binary]>=3.1",
    "rtree>=1.4.1",
]

[project.scripts]
mesh2brick-api = "mesh2brick.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh2brick"]

[dependency-groups]
dev = ["pytest>=8.3.5"]
