[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "sam3d-stream"
version = "0.1.0"
description = "SAM-3D streaming endpoint for real-time 3D reconstruction visualization"
requires-python = ">=3.11"
dependencies = [
    "fal>=0.14.0",
    "pydantic>=2.0",
    "fastapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb>=0.13.13",
]

[tool.fal.apps]
sam-3d-stream = { auth = "shared", ref = "app.py::SAM3DStreamApp" }
trellis-2-stream = { auth = "shared", ref = "trellis2_app.py::Trellis2StreamApp" }

